2015-11-07 Harish Potti <harish.potti@cern.ch>
	* Added new GRL and IlumiCalc file 
	
2015-11-06 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: moving to getCorrectedMu method for PURWtool
	
2015-10-30 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: added variable for dilep triggers and L1EM20 for data 2015
	* generic_config-*15.txt added corresponding strings to check match
	
2015-10-28 Harish Potti <hpotti@cern.ch>
	* Xsection13TeV_tth_sig_v1.txt Updated Xsections with Latest TopDataPreparation package
2015-10-26 Harish Potti <hpotti@cern.ch>
	* Xsection13TeV_tth_bkg_v1.txt Added all the missing xsections
	
2015-10-23 Rohin Narayan <narayan@cern.ch>
	* Changing higgsdecaymode to int type
	* Also changed the name of the branch to "higgsDecayMode" in tune with
	Run1 scheme. 

2015-10-22 Rohin T Narayan <narayan@cern.ch>
	* Adding higgs decay mode to the ntuples

2015-10-15 David Hohn <dhohn@cern.ch>
	* Add DuplicateSelector to veto double events, enabled for data
	* update data config for 2.3.30 as well
	* added ttHtautau xsections
	* protect data from TauEfficiencyCorrections

2015-10-15 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: split lepton SF into trigger and others 
	
2015-10-15 Giuseppe Salamanna <salaman AT cern.ch>
	* TruthSelector: lowered pt cut to 1 GeV and checking against geant leptons
	
2015-10-15 David Hohn <dhohn@cern.ch>
	* change name: electron_truthOrig ->electron_truthOrigin, consistent with muons and taus

2015-10-13 Harish Potti <harish.potti@cern.ch>
	* added new GRL and IlumiCalc file

2015-10-12 David Hohn <dhohn@cern.ch>
	* added variable: total_leptons

2015-10-09 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: added variable for muon match to HLT_mu18_mu8noL1
	* generic_config-*15.txt added corresponding string to check match

2015-10-09 David Hohn <dhohn@cern.ch>
	* move to Top,2.3.30
	  needed only minor interface changes