@@ -13,7 +13,7 @@ ttHMultileptonLooseEventSaver::SelectElectrons(const top::Event& event) {
   xAOD::AuxContainerBase* goodElectronsAux = new xAOD::AuxContainerBase();
   goodElectrons->setStore(goodElectronsAux);
   // have TStore manage aux
-  top::check(evtStore()->tds()->record( goodElectronsAux, "ttHSelectedElectronsAux" ), 
+  top::check(evtStore()->tds()->record( goodElectronsAux, "ttHSelectedElectrons"+m_sysName+"Aux" ), 
 	     "Failed to register selected electrons");
   if (event.m_electrons.size() > 0) {
     //std::cout << "Initial size: " << event.m_electrons.size() << std::endl;
@@ -67,7 +67,7 @@ ttHMultileptonLooseEventSaver::SelectMuons(const top::Event& event) {
   xAOD::AuxContainerBase* goodMuonsAux = new xAOD::AuxContainerBase();
   goodMuons->setStore(goodMuonsAux);
   // have TStore manage aux
-  top::check(evtStore()->tds()->record( goodMuonsAux, "ttHSelectedMuonsAux" ),
+  top::check(evtStore()->tds()->record( goodMuonsAux, "ttHSelected"+m_sysName+"MuonsAux" ),
 	     "Failed to register selected muons");
   for (const auto muItr : event.m_muons) {
     event.m_ttreeIndex == 0 && m_muCutflow->Fill(1);
@@ -111,7 +111,7 @@ ttHMultileptonLooseEventSaver::SelectJets(const top::Event& event) {
   xAOD::AuxContainerBase* goodJetsAux = new xAOD::AuxContainerBase();
   goodJets->setStore(goodJetsAux);
   // have TStore manage aux
-  top::check(evtStore()->tds()->record( goodJetsAux, "ttHSelectedJetsAux" ),
+  top::check(evtStore()->tds()->record( goodJetsAux, "ttHSelected"+m_sysName+"JetsAux" ),
 	     "Failed to register selected jets");
   for (const auto jetItr : event.m_jets) {
     event.m_ttreeIndex == 0 && m_jetCutflow->Fill(1);
@@ -145,7 +145,7 @@ ttHMultileptonLooseEventSaver::SelectTaus(const top::Event& event) {
   auto goodTausAux = new xAOD::AuxContainerBase();
   goodTaus->setStore(goodTausAux);
   // have TStore manage aux
-  top::check(evtStore()->tds()->record( goodTausAux, "ttHSelectedTausAux" ),
+  top::check(evtStore()->tds()->record( goodTausAux, "ttHSelected"+m_sysName+"TausAux" ),
 	     "Failed to register selected taus");
   for (const auto tauItr : event.m_tauJets) {
     event.m_ttreeIndex == 0 && m_tauCutflow->Fill(1);
@@ -210,13 +210,13 @@ ttHMultileptonLooseEventSaver::OverlapRemoval(std::shared_ptr<xAOD::ElectronCont
   auto newGoodTauAux = new xAOD::AuxContainerBase();
   newGoodTau->setStore(newGoodTauAux);
   // have TStore manage aux
-  top::check(evtStore()->tds()->record( newGoodElAux, "ttHORElectronsAux" ),
+  top::check(evtStore()->tds()->record( newGoodElAux, "ttHOR"+m_sysName+"ElectronsAux" ),
 	     "Failed to register electrons after OR");
-  top::check(evtStore()->tds()->record( newGoodMuAux, "ttHORMuonsAux" ),
+  top::check(evtStore()->tds()->record( newGoodMuAux, "ttHOR"+m_sysName+"MuonsAux" ),
 	     "Failed to register muons after OR");
-  top::check(evtStore()->tds()->record( newGoodJetAux, "ttHORJetsAux" ),
+  top::check(evtStore()->tds()->record( newGoodJetAux, "ttHOR"+m_sysName+"JetsAux" ),
 	     "Failed to register jets after OR");
-  top::check(evtStore()->tds()->record( newGoodTauAux, "ttHORTausAux" ),
+  top::check(evtStore()->tds()->record( newGoodTauAux, "ttHOR"+m_sysName+"TausAux" ),
 	     "Failed to register taus after OR");
   for (const auto elItr : *goodEl) {
     elItr->auxdecor<short>("ttHpassOVR") = 1;
